--- a/resources/css/admin-layout.scss
+++ b/resources/css/admin-layout.scss
@@ -17,12 +17,17 @@
     gap: normal;
     justify-content: space-between;
     align-items: flex-start;
+    margin-right: 1rem;
+    flex-grow: 1;
   }
   .page-heading {
     margin:0;
     font-size: 1.5rem;
     font-weight: 500;
     padding: 0;
+  }
+  .header-username {
+    margin:0
   }
 
 }
